--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^14.1.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "json-server": "^0.17.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
